{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 88,
  "lineage": "f26c1f2a-f2b9-49a0-b33c-9a301a5ba25c",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c7de12b91e15a136",
            "domain": "vpc",
            "id": "eipalloc-0c7de12b91e15a136",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-235-25-38.compute-1.amazonaws.com",
            "public_ip": "18.235.25.38",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:041952152622:internet-gateway/igw-004e0946e304d3d59",
            "id": "igw-004e0946e304d3d59",
            "owner_id": "041952152622",
            "tags": {
              "Environment": "dev1",
              "Name": "dev1-igw"
            },
            "tags_all": {
              "Environment": "dev1",
              "Name": "dev1-igw"
            },
            "vpc_id": "vpc-0b81e7b30047dad8b"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c7de12b91e15a136",
            "association_id": "eipassoc-0fd2b75033561ee3b",
            "connectivity_type": "public",
            "id": "nat-084bfb343267e9e89",
            "network_interface_id": "eni-0c1e82c31aa3dca71",
            "private_ip": "10.0.1.216",
            "public_ip": "18.235.25.38",
            "subnet_id": "subnet-0178d3c0f9d8ea6c2",
            "tags": {
              "Environment": "dev1",
              "Name": "nat"
            },
            "tags_all": {
              "Environment": "dev1",
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09653eaaf36ddadca1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-084bfb343267e9e89",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09653eaaf36ddadca",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-004e0946e304d3d59",
            "id": "r-rtb-0585256908461643b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0585256908461643b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:041952152622:route-table/rtb-09653eaaf36ddadca",
            "id": "rtb-09653eaaf36ddadca",
            "owner_id": "041952152622",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev1",
              "Name": "dev1-private-route-table"
            },
            "tags_all": {
              "Environment": "dev1",
              "Name": "dev1-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b81e7b30047dad8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:041952152622:route-table/rtb-0585256908461643b",
            "id": "rtb-0585256908461643b",
            "owner_id": "041952152622",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev1",
              "Name": "dev1-public-route-table"
            },
            "tags_all": {
              "Environment": "dev1",
              "Name": "dev1-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b81e7b30047dad8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054ea7df8aa0eb600",
            "route_table_id": "rtb-09653eaaf36ddadca",
            "subnet_id": "subnet-0c6adba4abe79c10d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054ea7df8aa0eb600",
            "route_table_id": "rtb-09653eaaf36ddadca",
            "subnet_id": "subnet-0c6adba4abe79c10d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054ea7df8aa0eb600",
            "route_table_id": "rtb-09653eaaf36ddadca",
            "subnet_id": "subnet-0c6adba4abe79c10d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054ea7df8aa0eb600",
            "route_table_id": "rtb-09653eaaf36ddadca",
            "subnet_id": "subnet-0c6adba4abe79c10d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054ea7df8aa0eb600",
            "route_table_id": "rtb-09653eaaf36ddadca",
            "subnet_id": "subnet-0c6adba4abe79c10d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054ea7df8aa0eb600",
            "route_table_id": "rtb-09653eaaf36ddadca",
            "subnet_id": "subnet-0c6adba4abe79c10d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054ea7df8aa0eb600",
            "route_table_id": "rtb-09653eaaf36ddadca",
            "subnet_id": "subnet-0c6adba4abe79c10d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054ea7df8aa0eb600",
            "route_table_id": "rtb-09653eaaf36ddadca",
            "subnet_id": "subnet-0c6adba4abe79c10d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054ea7df8aa0eb600",
            "route_table_id": "rtb-09653eaaf36ddadca",
            "subnet_id": "subnet-0c6adba4abe79c10d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054ea7df8aa0eb600",
            "route_table_id": "rtb-09653eaaf36ddadca",
            "subnet_id": "subnet-0c6adba4abe79c10d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054ea7df8aa0eb600",
            "route_table_id": "rtb-09653eaaf36ddadca",
            "subnet_id": "subnet-0c6adba4abe79c10d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c13deebc4880f0e3",
            "route_table_id": "rtb-0585256908461643b",
            "subnet_id": "subnet-0178d3c0f9d8ea6c2"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c13deebc4880f0e3",
            "route_table_id": "rtb-0585256908461643b",
            "subnet_id": "subnet-0178d3c0f9d8ea6c2"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c13deebc4880f0e3",
            "route_table_id": "rtb-0585256908461643b",
            "subnet_id": "subnet-0178d3c0f9d8ea6c2"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c13deebc4880f0e3",
            "route_table_id": "rtb-0585256908461643b",
            "subnet_id": "subnet-0178d3c0f9d8ea6c2"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c13deebc4880f0e3",
            "route_table_id": "rtb-0585256908461643b",
            "subnet_id": "subnet-0178d3c0f9d8ea6c2"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c13deebc4880f0e3",
            "route_table_id": "rtb-0585256908461643b",
            "subnet_id": "subnet-0178d3c0f9d8ea6c2"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c13deebc4880f0e3",
            "route_table_id": "rtb-0585256908461643b",
            "subnet_id": "subnet-0178d3c0f9d8ea6c2"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c13deebc4880f0e3",
            "route_table_id": "rtb-0585256908461643b",
            "subnet_id": "subnet-0178d3c0f9d8ea6c2"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c13deebc4880f0e3",
            "route_table_id": "rtb-0585256908461643b",
            "subnet_id": "subnet-0178d3c0f9d8ea6c2"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c13deebc4880f0e3",
            "route_table_id": "rtb-0585256908461643b",
            "subnet_id": "subnet-0178d3c0f9d8ea6c2"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c13deebc4880f0e3",
            "route_table_id": "rtb-0585256908461643b",
            "subnet_id": "subnet-0178d3c0f9d8ea6c2"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:041952152622:security-group/sg-0cd838d5d6557b127",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0cd838d5d6557b127",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "dev1-default-sg",
            "name_prefix": "",
            "owner_id": "041952152622",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev1"
            },
            "tags_all": {
              "Environment": "dev1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b81e7b30047dad8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:041952152622:subnet/subnet-0c6adba4abe79c10d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6adba4abe79c10d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "041952152622",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev1",
              "Name": "dev1-us-east-1a-private-subnet"
            },
            "tags_all": {
              "Environment": "dev1",
              "Name": "dev1-us-east-1a-private-subnet"
            },
            "vpc_id": "vpc-0b81e7b30047dad8b"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:041952152622:subnet/subnet-0178d3c0f9d8ea6c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0178d3c0f9d8ea6c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "041952152622",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev1",
              "Name": "dev1-us-east-1a-public-subnet"
            },
            "tags_all": {
              "Environment": "dev1",
              "Name": "dev1-us-east-1a-public-subnet"
            },
            "vpc_id": "vpc-0b81e7b30047dad8b"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:041952152622:vpc/vpc-0b81e7b30047dad8b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0287bea6be1c280e2",
            "default_route_table_id": "rtb-090656caf47bf16d5",
            "default_security_group_id": "sg-0754f59b98e9312ba",
            "dhcp_options_id": "dopt-0778e6677a5d2c895",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b81e7b30047dad8b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-090656caf47bf16d5",
            "owner_id": "041952152622",
            "tags": {
              "Environment": "dev1",
              "Name": "dev1-vpc"
            },
            "tags_all": {
              "Environment": "dev1",
              "Name": "dev1-vpc"
            }
          }
        }
      ]
    }
  ]
}